Commit with UBSClientServiceImplTest improvements